Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.h
@@ -201,6 +201,7 @@ private:
     uint64_t m_framesCount { 0 };
     uint64_t m_lastFramesCount { 0 };
     int64_t m_defaultTorchMode { 0 };
+    OptionSet<RealtimeMediaSourceSettings::Flag> m_pendingSettingsChanges;
     bool m_useSensorAndDeviceOrientation { true };
 };
 
